force-app/main/default/objects/Cancellation_Case_Rule_Product__c/Cancellation_Case_Rule_Product__c.object-meta.xml
<CustomObject>
    <description>NICC-026959</description>
    <label>Cancellation Case Rule Product</label>
    <nameField>
        <displayFormat>CRP-{000000}</displayFormat>
        <label>Case Rule Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Case Rule Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>