force-app/main/default/objects/Cancellation_Case_Rule_Product__c/fields/Cancellation_Case_Rule__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Case_Rule__c</fullName>
    <description>NICC-026959</description>
    <label>Cancellation Case Rule</label>
    <referenceTo>Cancellation_Case_Rule__c</referenceTo>
    <relationshipLabel>Cancellation Case Rule Products</relationshipLabel>
    <relationshipName>Cancellation_Case_Rule_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>