force-app/main/default/objects/Cancellation_Case_Rule_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-026959</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cancellation Case Rule Products</relationshipLabel>
    <relationshipName>Cancellation_Case_Rule_Products</relationshipName>
    <type>Lookup</type>
</CustomField>