force-app/main/default/objects/Cancellation_Case_Rule_Product__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>NICC-026959</description>
    <formula>Product__r.Product_Group__r.Name</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>